--- a/index.html
+++ b/index.html
@@ -80,19 +80,37 @@
         <h2>Практическое задание</h2>
         <section class="service">
           <h3 class="service__title">Сервис комментариев со спам фильтром</h3>
-          <div class="service__subtitle">
-            <p class="service__subtitle_text">Оставьте ваш комментарий</p>
-            <p class="service__subtitle_text">Чат</p>
-          </div>
-          <div class="service__input">
-            <label for="fio">Введите ваше ФИО:</label>
-            <input class="service__input_fio" type="text" id="fio">
-            <label for="fio">Введите ссылку вашего аватара:</label>
-            <input class="service__input_avatar" type="text" id="avatar" >
-            <label for="fio">Оставьте комментарий:</label>
-            <input class="service__input_comment" type="text" id="comment" >
+          <div class="service__blok">
+            <div class="service__subtitle">
+              <p class="service__subtitle_text">Оставьте ваш комментарий</p>
+              <div class="service__input">
+                <label for="fio">Введите ваше ФИО:</label>
+                <input class="service__input_fio" type="text" id="fio" placeholder="Введите ваше ФИО">
+                <label for="fio">Введите ссылку вашего аватара:</label>
+                <input class="service__input_avatar" type="text" id="avatar" placeholder="Введите ссылку вашего аватара">
+                <label for="fio">Оставьте комментарий:</label>
+                <input class="service__input_comment" type="text" id="comment" placeholder="Оставьте комментарий">
+                <button class="service__input_button">Отправить</button>
+              </div>
+            </div>
+            <div class="service__subtitle">
+              <p class="service__subtitle_text">Чат</p>
+              <div class="service__subtitle_foto"></div>
+              <div class="service__subtitle_fio"></div>
+              <div class="service__subtitle_comment"></div>
+            </div>
           </div>
         </section>
+      </section>
+      <section class="practice2">
+        <h2>Практическое задание со *</h2>
+        <p>Напишите функцию deleteTags(str), которая возвращает строку str, <br>
+          очищенную от всех тегов (br, col, embed, hr, img и другие).<br>
+          function deleteTags(str) {<br>
+              // ваш код<br>
+          };<br>
+          console.log(deleteTags(str));<br>
+          </p>
       </section>
     </div>
     <script src="index.js"></script>
